# proton-usage

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  package.sh
.github/workflows/: ci.yml  release.yml
ci/: latest-changes.sh
src/: lib.rs  main.rs
src/steam/: app_info.rs  compat_tool.rs  local_config.rs  login_users.rs  mod.rs  registry.rs  shortcuts.rs
