[package]
name = "proton-usage"
authors = [ "rfvgyhn" ]
version = "0.2.0"
edition = "2021"
description = "Lists Steam applications that have specified a Steam Play compatibility tool"
homepage = "https://github.com/rfvgyhn/proton-usage"
repository = "https://github.com/rfvgyhn/proton-usage"
license = "MIT"
keywords = ["steam", "proton"]
categories = ["command-line-utilities"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
derive_more = "0.99"
dirs = "4.0"
clap = "3.0.0-beta.5"
log = "0.4"
stderrlog = "0.5"
